language/move-lang/tests/move_check/parser/ability_constraint_trailing_plus.move
address 0x42 {
module M {
    // unexpected trailing plus
    fun foo<T: copy +>() {}
}
}
